<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyAppSubmission</string>
    <string name="auto_history">Automotive Brand History</string>
    <string name="autohistory">Automotive History</string>
    <string name="brand_name">Nama Brand</string>
    <string name="brand_history">Brand History</string>
    <string name="since">since 1900</string>
    <string name="founder">founder : </string>
    <string name="owner">Owner/CEO : </string>
    <string name="about">About</string>
    <string name="my_email">dadenkasandi43@mhs.unram.ac.id</string>
    <string name="my_name">Daden Kasandi Putra Wesa</string>
    <string name="my_profile">Hi, Im Daden Kasandi, a passionate individual with a zest for life and a love for technology.Cycling is not just a hobby; its a way of life for me. Theres something liberating about the open road, the wind in your hair, and the rhythm of the pedals. I find solace in the quiet countryside rides and the excitement of conquering new trails.Traveling is my second love. Exploring new places, experiencing diverse cultures, and tasting different cuisines energize my soul. Whether its a backpacking adventure or a luxurious escape, Im always ready to embark on a new journey.Music is my constant companion. Its the soundtrack to my life, enhancing every experience. From upbeat tunes during cycling sessions to soulful melodies on long trips, music completes the picture.My academic journey has been driven by a deep curiosity for technology. Informatic engineering has equipped me with the knowledge and skills to understand and shape the digital world.My fascination with mobile development knows no bounds. Creating innovative and user-friendly mobile applications is not just a career choice; its a passion. I believe that the future is mobile, and Im excited to contribute to it by crafting apps that make a difference.In a rapidly evolving world, Im committed to lifelong learning and staying at the forefront of mobile technology.Join me on my journey as I explore the world, chase my cycling adventures, and code my way into the mobile app landscape.Lets connect and share experiences!</string>
    <string-array name="data_photo">
        <item tools:ignore="TypographyDashes">https://cdn.motor1.com/images/mgl/4JyZA/s3/lamborghini-aventador-lp-780-4-ultimae.webp</item>
        <item tools:ignore="TypographyDashes">https://cdn.motor1.com/images/mgl/rPR91/s3/ferrari-sf90-stradale-la-prova.webp</item>
        <item tools:ignore="TypographyDashes">https://cdn.motor1.com/images/mgl/QjGn3/s3/2023-nissan-z.webp</item>
        <item tools:ignore="TypographyDashes">https://cdn.motor1.com/images/mgl/40ZzQA/s3/toyota-bz-compact-suv-concept.webp</item>
        <item tools:ignore="TypographyDashes">https://cdn.motor1.com/images/mgl/VA0z9/s3/tesla-roadster.webp</item>
        <item tools:ignore="TypographyDashes">https://www.audiusa.com/content/dam/nemo/ca/NoMo/Home/Stage/1920x1080_v4_MY24---Q8-Sportback-e-tron---Side-Profile---Driving.jpg</item>
        <item tools:ignore="TypographyDashes">https://www.bmwusa.com/content/dam/bmwusa/common/vehicles/2023/my24/m-models/m3-sedan/overview/tablet/BMW-MY24-M3-Overview-M3CS-hero-Tablet.jpg</item>
        <item tools:ignore="TypographyDashes">https://uploads.vw-mms.de/system/production/images/vwn/075/980/images/bb7baec2ff01596a5bf00793b11a7e41c6c8c368/DB2023AU00177_web_1160.jpg</item>
        <item tools:ignore="TypographyDashes">https://s3-prod.autonews.com/s3fs-public/MCLAREN-MAIN_i_10.jpg</item>
        <item tools:ignore="TypographyDashes">https://media.ed.edmunds-media.com/aston-martin/db11/2021/oem/2021_aston-martin_db11_convertible_v8-volante_fq_oem_1_815.jpg</item>
        <item tools:ignore="TypographyDashes">https://www.autos.id/wp-content/uploads/2022/03/new-honda-civic-e-hev-hybrid-europe-1536x864.jpg</item>
        <item tools:ignore="TypographyDashes">https://car-images.bauersecure.com/wp-images/13349/1056x594/80-mercedes-amg-gt63-e-performance-hero.jpg</item>
        <item tools:ignore="TypographyDashes">https://www.topgear.com/sites/default/files/2023/05/1-Alfa-Romeo-Giulia.jpg</item>
        <item tools:ignore="TypographyDashes">https://cdn.motor1.com/images/mgl/zxp4P6/s3/2022-ford-gt-lm-edition.webp</item>
        <item tools:ignore="TypographyDashes">https://invoice-pricing.com/cars/wp-content/uploads/chevrolet-camaro-z28-sketch.jpg</item>
    </string-array>
    <string-array name="data_name">
        <item>Lamborghini</item>
        <item>Ferrari</item>
        <item>Nissan</item>
        <item>Toyota</item>
        <item>Tesla</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>VolksWagen</item>
        <item>McLaren</item>
        <item>Aston Martin</item>
        <item>Honda</item>
        <item>Mercedes Benz</item>
        <item>Alfa Romeo</item>
        <item>Ford</item>
        <item>Chevrolet</item>
    </string-array>
    <string-array name="data_owner">
        <item>Volkswagen Group.</item>
        <item>Benedetto Vigna</item>
        <item>Makoto Uchida</item>
        <item>Akio Toyoda</item>
        <item>Elon Musk</item>
        <item>Volkswagen Group.</item>
        <item>Oliver Zipse</item>
        <item>Volkswagen Group.</item>
        <item>Mike Flewitt</item>
        <item>Tobias Moers</item>
        <item>Toshihiro Mibe</item>
        <item>Mercedes-Benz Group AG.</item>
        <item>Stellantis N.V.</item>
        <item>Jim Farley</item>
        <item>General Motors.</item>
    </string-array>
    <string-array name="data_founder">
        <item>Ferruccio Lamborghini</item>
        <item>Enzo Ferrari</item>
        <item>Yoshisuke Aikawa</item>
        <item>Kiichiro Toyoda</item>
        <item>Elon Musk</item>
        <item>August Horch</item>
        <item>Karl Rapp</item>
        <item>Ferdinand Porsche</item>
        <item>Bruce McLaren</item>
        <item>Lionel Martin</item>
        <item>Soichiro Honda</item>
        <item>Karl Benz</item>
        <item>Nicola Romeo</item>
        <item>Henry Ford</item>
        <item>Louis Chevrolet</item>
    </string-array>
</resources>